{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 53,
  "lineage": "632a804f-0b99-d809-89ef-d43a8a57a55c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808581944807:route-table/rtb-001c9f085793c20cc",
            "id": "rtb-001c9f085793c20cc",
            "owner_id": "808581944807",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "vandelay-private-rt"
            },
            "tags_all": {
              "Name": "vandelay-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db57dc3fcd93f71d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012aba77035395579",
            "region": "us-east-1",
            "route_table_id": "rtb-001c9f085793c20cc",
            "subnet_id": "subnet-00b25260c334aa576"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018a5985bc8d25a56",
            "region": "us-east-1",
            "route_table_id": "rtb-001c9f085793c20cc",
            "subnet_id": "subnet-0075496b7355b0c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808581944807:security-group/sg-00bed3bd850e17e67",
            "description": "Lambda egress to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bed3bd850e17e67",
            "ingress": [],
            "name": "vandelay-lambda-sg",
            "name_prefix": "",
            "owner_id": "808581944807",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0db57dc3fcd93f71d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808581944807:security-group/sg-0e0f0cec0f25d3655",
            "description": "Security group for RDS PostgreSQL",
            "egress": [],
            "id": "sg-0e0f0cec0f25d3655",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bed3bd850e17e67"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vandelay-rds-20250814193124568400000002",
            "name_prefix": "vandelay-rds-",
            "owner_id": "808581944807",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vandelay-rds-sg"
            },
            "tags_all": {
              "Name": "vandelay-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db57dc3fcd93f71d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808581944807:subnet/subnet-00b25260c334aa576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b25260c334aa576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808581944807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vandelay-private-1"
            },
            "tags_all": {
              "Name": "vandelay-private-1"
            },
            "vpc_id": "vpc-0db57dc3fcd93f71d"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808581944807:subnet/subnet-0075496b7355b0c69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0075496b7355b0c69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808581944807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "vandelay-private-2"
            },
            "tags_all": {
              "Name": "vandelay-private-2"
            },
            "vpc_id": "vpc-0db57dc3fcd93f71d"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}